Convert Jekyll markdown to Docusaurus markdown
- Convert some Jekyll markdown to Docusaurus markdown
- Update the full home page

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,10 @@
   align-items: center;
   justify-content: center;
 }
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
