--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,13 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+.center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.content-home {
+  max-width: 1280px;
+  margin: 1rem;
+}
