--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,6 +28,12 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+.hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/img/home-page-feature.jpg');
+}
+.hero--primary {
+  --ifm-hero-text-color:rgb(255, 255, 255)
+}
 .center {
   display: flex;
   flex-direction: row;
